takes user/port from config.properties file